--- a/styles.css
+++ b/styles.css
@@ -19,34 +19,27 @@ body {
 
 .Project {
     height: 90vh;
-    width: 90vw;
+    width: 100vw;
+}
+
+.container {
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
+    font-size: 1.8rem;
+    text-align: center;
+    width: 90%;
+    margin: auto;
+    font-weight: bold;
+    font-family: 'Quicksand', sans-serif;
+    
 }
 .scoreboard {
-    display: grid;
-	grid-template-columns: repeat(3, 2fr);
-	width: 70em;
-	font-family: 'Quicksand', sans-serif;
-    font-size: 1.4rem;
+    display:flex;
     justify-content: center;
     justify-items: center;
     align-items: center;
-}
-
-.scoreboard-name,
-.score {
-	display: flex;
-    padding: 0.3em;
-	text-align: center;
-}
-
-.scoreboard-name {
-	font-weight: bold;
-	border-bottom: 0.07em solid black;
-    color: black;
-}
-
-.score {
-	font-size: 2em;
 }
 
 
